# OHTU-lukuvinkkikirjasto

./: .coverage  .coveragerc  .gitignore  LICENSE  README.md  app.py  pyproject.toml  routes.py  run_coverage_report.sh  run_robot_tests.sh  setup.py  tips.py
.github/workflows/: main.yml
dokumentaatio/: Untitled Diagram.drawio
src/: __init__.py  app.py  auth.py  db.py  db.sqlite  db_wrapper.py  main.py  models.py  routes.py  tips.py  tips_library.py
src/templates/: add_tips.html  delete.html  error.html  home.html  login.html  register.html  results.html
src/tests/: Tips_test.py  tips_test.py
src/tests/robotframework/: add_tip.robot  resource.robot
