[tool.poetry]
name = "ohtu-lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["Mari Suomalainen <mariannikasuomalainen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
robotframework = "^4.0"
selenium = "^3.141.0"
robotframework-selenium2library = "^3.0.0"
robotframework-faker = "^5.0.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
